// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passwordEntry component matches the snapshot when keyboard is drawn 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "black",
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <Header
      title=""
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 20,
          "padding": "10%",
        }
      }
    />
    <CenteredText
      msg="This password will be stored in your keychain. After setting it, please make sure you have passcode enabled."
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 14,
          "opacity": 0.6,
          "padding": "10%",
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Repeat password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "rgba(255, 239, 223, 0.38)",
          "fontSize": 14,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={true}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={true}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "#942f51",
            "height": 48,
            "width": 164,
          },
          "text": Object {
            "backgroundColor": "#942f51",
            "fontFamily": "TTCommons",
            "fontSize": 22,
            "fontWeight": "100",
          },
        }
      }
      testID={null}
      text="Continue"
      upperCase={false}
    />
  </Block>
</Container>
`;

exports[`passwordEntry component matches the snapshot when no input is present 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "black",
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <Header
      title="Step 2"
    />
    <CenteredText
      msg="Set a password to encrypt your data on the device"
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 20,
          "padding": "10%",
        }
      }
    />
    <CenteredText
      msg="This password will be stored in your keychain. After setting it, please make sure you have passcode enabled."
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 14,
          "opacity": 0.6,
          "padding": "10%",
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Repeat password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "rgba(255, 239, 223, 0.38)",
          "fontSize": 14,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={true}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={true}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "#942f51",
            "height": 48,
            "width": 164,
          },
          "text": Object {
            "backgroundColor": "#942f51",
            "fontFamily": "TTCommons",
            "fontSize": 22,
            "fontWeight": "100",
          },
        }
      }
      testID={null}
      text="Continue"
      upperCase={false}
    />
  </Block>
</Container>
`;

exports[`passwordEntry component matches the snapshot when passwords are not valid 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "black",
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <Header
      title=""
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 20,
          "padding": "10%",
        }
      }
    />
    <CenteredText
      msg="This password will be stored in your keychain. After setting it, please make sure you have passcode enabled."
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 14,
          "opacity": 0.6,
          "padding": "10%",
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Repeat password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg="At least one uppercase letter needed"
      style={
        Object {
          "color": "rgba(255, 239, 223, 0.38)",
          "fontSize": 14,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={true}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={true}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "#942f51",
            "height": 48,
            "width": 164,
          },
          "text": Object {
            "backgroundColor": "#942f51",
            "fontFamily": "TTCommons",
            "fontSize": 22,
            "fontWeight": "100",
          },
        }
      }
      testID={null}
      text="Continue"
      upperCase={false}
    />
  </Block>
</Container>
`;

exports[`passwordEntry component matches the snapshot when passwords are valid 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "black",
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <Header
      title=""
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 20,
          "padding": "10%",
        }
      }
    />
    <CenteredText
      msg="This password will be stored in your keychain. After setting it, please make sure you have passcode enabled."
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 14,
          "opacity": 0.6,
          "padding": "10%",
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Repeat password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "rgba(255, 239, 223, 0.38)",
          "fontSize": 14,
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={false}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={true}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "#942f51",
            "height": 48,
            "width": 164,
          },
          "text": Object {
            "backgroundColor": "#942f51",
            "fontFamily": "TTCommons",
            "fontSize": 22,
            "fontWeight": "100",
          },
        }
      }
      testID={null}
      text="Continue"
      upperCase={false}
    />
  </Block>
</Container>
`;
